--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "vue serve",
+    "build": "vue build",
+    "lint": "vue lint"
   },
   "dependencies": {
     "core-js": "^3.8.3",
