--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,17 @@ jobs:
           npm ci
           npm run build
 
-      - name: deploy
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v2
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          path: ./dist
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
+        if: ${{ github.ref == 'refs/heads/main' }}
