--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
-          path: ./dist
+          path: ./docs
 
       - name: Deploy to GitHub Pages
         id: deployment
